feat(gtk3.20: notebook): obey gradient option + overall appearance rehaul

--- a/src/gtk-3.20/scss/_functions.scss
+++ b/src/gtk-3.20/scss/_functions.scss
@@ -63,6 +63,21 @@ $modules: () !default;
     }
 }
 
+@mixin half-linear-gradient($color, $direction: to bottom) {
+    @if $gradient == 0 {
+        background-color: $color;
+        background-image: none;
+    } @else {
+        $amount: $gradient / 4;
+
+        background-color: $color;
+        background-image: linear-gradient($direction,
+            shade($color, (1 + $amount)),
+            shade($color, (1 - $amount))
+        );
+    }
+}
+
 @mixin border($color) {
     border-color: border_normal($color);
 
