--- a/src/gtk-3.20/scss/widgets/_notebook.scss
+++ b/src/gtk-3.20/scss/widgets/_notebook.scss
@@ -163,6 +163,7 @@
                         );
                         padding-left: $roundness_spacing;
                         padding-right: $roundness_spacing;
+                        -gtk-outline-radius: 0;
 
                         @if $roundness <= 6 {
                             margin-#{$_pos}: $roundness;
@@ -181,12 +182,16 @@
                             @if $roundness <= 13 {
                                 @if $_pos==top {
                                     border-radius: $roundness 0 0;
+                                    -gtk-outline-radius: $roundness 0 0;
                                 } @else if $_pos==bottom {
                                     border-radius: 0 0 0 $roundness;
+                                    -gtk-outline-radius: 0 0 0 $roundness;
                                 } @else if $_pos==left {
                                     border-radius: $roundness 0 0;
+                                    -gtk-outline-radius: $roundness 0 0;
                                 } @else if $_pos==right {
                                     border-radius: 0 $roundness 0 0;
+                                    -gtk-outline-radius: 0 $roundness 0 0;
                                 }
                             } @else {
                                 border-radius: 0;
@@ -197,12 +202,16 @@
                             @if $roundness <= 13 {
                                 @if $_pos==top {
                                     border-radius: 0 $roundness 0 0;
+                                    -gtk-outline-radius: 0 $roundness 0 0;
                                 } @else if $_pos==bottom {
                                     border-radius: 0 0 $roundness;
+                                    -gtk-outline-radius: 0 0 $roundness;
                                 } @else if $_pos==left {
                                     border-radius: 0 0 0 $roundness;
+                                    -gtk-outline-radius: 0 0 0 $roundness;
                                 } @else if $_pos==right {
                                     border-radius: 0 0 $roundness;
+                                    -gtk-outline-radius: 0 0 $roundness;
                                 }
                             } @else {
                                 border-radius: 0;
@@ -216,6 +225,7 @@
                             margin-#{$_pos}: 0;
 
                             @if $roundness <= 6 {
+                                -gtk-outline-radius: $roundness;
                                 @if $_pos==top {
                                     border-radius: $roundness $roundness 0 0;
                                 } @else if $_pos==bottom {
