fix(gtk3.20: notebook): don't apply gradient to the selected tab

--- a/src/gtk-3.20/scss/widgets/_notebook.scss
+++ b/src/gtk-3.20/scss/widgets/_notebook.scss
@@ -115,7 +115,7 @@
                 }
 
                 &:checked, &:checked:hover {
-                    @include half-linear-gradient($bg_color);
+                    background: $bg_color;
                     border-color: $borders_color;
                     color: $fg_color;
                 }
