feat(gtk3.20; change_color): make outline width configurable

--- a/src/gtk-3.20/scss/_global.scss
+++ b/src/gtk-3.20/scss/_global.scss
@@ -152,3 +152,5 @@ $roundness: %ROUNDNESS%px;
 $spacing: %SPACING%px;
 $gradient: %GRADIENT%;
 $contrast: .8;
+$outline_width: %OUTLINE_WIDTH%px;
+$button_outline_width: %BTN_OUTLINE_WIDTH%px;
