--- a/src/gtk-3.20/scss/widgets/_base.scss
+++ b/src/gtk-3.20/scss/widgets/_base.scss
@@ -11,7 +11,7 @@
 
     outline-color: alpha($selected_bg_color, .5);
     outline-style: dashed;
-    outline-width: 1px;
+    outline-width: $outline_width;
     outline-offset: -1px;
     -gtk-outline-radius: $roundness;
 }
