--- a/src/gtk-3.20/scss/widgets/_button.scss
+++ b/src/gtk-3.20/scss/widgets/_button.scss
@@ -486,6 +486,11 @@
                 }
                 */
 
+                &:focus {
+                    border-top-color: border_focus($borders_color);
+                    border-bottom-color: border_focus($borders_color);
+                }
+
                 &:dir(rtl) { border-style: none solid none none; }
 
                 &:active { box-shadow: inset 0 2px 3px -1px transparentize($black, .8); }
@@ -500,11 +505,23 @@
                 &:dir(rtl):first-child {
                     border-radius: $roundness 0 0 $roundness;
                     -gtk-outline-radius: $roundness 0 0 $roundness;
+
+                    &:focus {
+                        border-top-color: border_focus($borders_color);
+                        border-bottom-color: border_focus($borders_color);
+                        border-left-color: border_focus($borders_color);
+                    }
                 }
 
                 &:dir(ltr):last-child {
                     border-radius: 0 $roundness $roundness 0;
                     -gtk-outline-radius: 0 $roundness $roundness 0;
+
+                    &:focus {
+                        border-top-color: border_focus($borders_color);
+                        border-bottom-color: border_focus($borders_color);
+                        border-right-color: border_focus($borders_color);
+                    }
                 }
             }
         }
@@ -529,12 +546,24 @@
                     border-style: solid solid none;
                     border-radius: $roundness $roundness 0 0;
                     -gtk-outline-radius: $roundness $roundness 0 0;
+
+                    &:focus {
+                        border-top-color: border_focus($borders_color);
+                        border-left-color: border_focus($borders_color);
+                        border-right-color: border_focus($borders_color);
+                    }
                 }
 
                 &.down {
                     border-style: none solid solid;
                     border-radius: 0 0 $roundness $roundness;
                     -gtk-outline-radius: 0 0 $roundness $roundness;
+
+                    &:focus {
+                        border-bottom-color: border_focus($borders_color);
+                        border-left-color: border_focus($borders_color);
+                        border-right-color: border_focus($borders_color);
+                    }
                 }
             }
         }
