fix(gtk.320: window): fix window decoration in openbox and some other WMs if roundness>0

--- a/src/gtk-3.20/scss/widgets/_window.scss
+++ b/src/gtk-3.20/scss/widgets/_window.scss
@@ -4,6 +4,8 @@
 
 @include exports("window") {
     decoration {
+        @include linear-gradient($header_button_bg_color);
+
         $_wm_border: transparentize($wm_border_unfocused, .77);
 
         border-radius: $roundness $roundness 0 0;
