--- a/src/gtk-3.20/scss/widgets/_window.scss
+++ b/src/gtk-3.20/scss/widgets/_window.scss
@@ -4,7 +4,7 @@
 
 @include exports("window") {
     decoration {
-        @include linear-gradient($header_button_bg_color);
+        @include linear-gradient($dark_bg_color);
 
         $_wm_border: transparentize($wm_border_unfocused, .77);
 
