feat(gtk2, gtk3, change_color): more uniform outline and borders' looks across gtk versions; configurable outline offset for gtk3

--- a/src/gtk-3.20/scss/_global.scss
+++ b/src/gtk-3.20/scss/_global.scss
@@ -154,3 +154,4 @@ $gradient: %GRADIENT%;
 $contrast: .8;
 $outline_width: %OUTLINE_WIDTH%px;
 $button_outline_width: %BTN_OUTLINE_WIDTH%px;
+$button_outline_offset: %BTN_OUTLINE_OFFSET%px;
