--- a/src/gtk-3.20/scss/widgets/_menu.scss
+++ b/src/gtk-3.20/scss/widgets/_menu.scss
@@ -1,6 +1,10 @@
 @import "entry";
 
-
+$menu_borders_color: mix(
+    $menu_bg_color,
+    $menu_fg_color,
+    if(lightness($menu_bg_color) < 50%, .18, .1)
+);
 
 @mixin menu_calendar($bg, $fg) {
     color: $fg;
@@ -68,6 +72,7 @@
 *******/
 
 @include exports("menu") {
+
     menu,
     .menu,
     .context-menu {
@@ -79,18 +84,23 @@
 
         .csd & { border: 0; }  // axes borders in a composited env
 
-        &:selected { background-color: $selected_bg_color; }
+        &:selected {
+            background-color: $selected_bg_color;
+            color: $selected_fg_color;
+        }
 
         // A little hack to get some extra space above/below menuitem separators
         separator,
         .csd & separator {
-            background-color: shade($menu_bg_color, ($contrast + .1));
+            background-color: $menu_borders_color;
             margin: ($spacing - 2px) 0;
         }
 
         // Firefox workaround
         .separator,
-        .csd & .separator { color: shade($menu_bg_color, ($contrast + .1)); }
+        .csd & .separator {
+            color: $menu_borders_color;
+        }
 
         menuitem {
             min-height: 16px;
@@ -107,7 +117,9 @@
 
             *:active, *:hover { color: $selected_fg_color; }
 
-            &:disabled, *:disabled { color: mix($menu_fg_color, $menu_bg_color, .5); }
+            &:disabled, *:disabled {
+                color: mix($menu_fg_color, $menu_bg_color, .5);
+            }
 
             // submenu indicators
             arrow {
@@ -160,17 +172,19 @@
 
             &.top {
                 margin-top: -6px;
-                border-bottom: 1px solid mix($fg_color, $base_color, .1);
+                border-bottom: 1px solid $menu_borders_color;
                 -gtk-icon-source: -gtk-icontheme("pan-up-symbolic");
             }
 
             &.bottom {
                 margin-bottom: -6px;
-                border-top: 1px solid mix($fg_color, $base_color, .1);
+                border-top: 1px solid $menu_borders_color;
                 -gtk-icon-source: -gtk-icontheme("pan-down-symbolic");
             }
 
-            &:hover { background-color: mix($fg_color, $base_color, .1); }
+            &:hover {
+                background-color: mix($menu_bg_color, $menu_fg_color, .1);
+            }
 
             &:backdrop { background-color: $backdrop_menu_color; }
 
