--- a/src/gtk-3.20/scss/widgets/_progress.scss
+++ b/src/gtk-3.20/scss/widgets/_progress.scss
@@ -211,8 +211,8 @@
 
             background-color: $button_bg_color;
             border: 1px solid $_slider_border;
-            //border-radius: 100%;
-            border-radius: $roundness;
+            border-radius: 100%;
+            //border-radius: $roundness;
 
             transition: $button_transition;
             transition-property: background, border;
